updated README.md to have a section that covers 'known bugs', added some additional 'features for the future', added an 'app hosting' section, and updated both 'current features' with new additions as well as removed said features from the 'features currently being worked on ' section since they were finished and implemented. Also updated 'features explored but was found not suited', removed deprecated console server output messages, fixed a better option for 'disabling' leave room button during ending game procedure after a finished game to avoid it interefering with that process causing unwanted bugs and errors. Added a background image to spice up the application a bit (user request).

--- a/css/styles.less
+++ b/css/styles.less
@@ -9,7 +9,10 @@
 body {
 	font-family: Helvetica, Arial;
 	font-size: 14px;
-	background-color: #eee;
+	background-color: #7fac71;
+	background-image: url(../img/bg.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 /* 
